--- a/do_peach.yaml
+++ b/do_peach.yaml
@@ -11,6 +11,6 @@ stages:
       inputs:
         targetType: filePath
         # filePath: ./do_peach.sh
-        filePath: ./do_peach.sh
+        filePath: (Agent.BuildDirectory)/do_peach.sh
 
 
