--- a/do_peach.yaml
+++ b/do_peach.yaml
@@ -5,6 +5,6 @@ steps:
       inputs:
         targetType: filePath
         # filePath: ./do_peach.sh
-        filePath: $(Agent.BuildDirectory)/do_peach.sh
+        filePath: $(Agent.BuildDirectory)/s/do_peach.sh
 
 
